fixed overflow on project cards

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -12,10 +12,16 @@
     position: absolute;
     top:50%;
     left: 50%;
+    z-index: 500;
     transform: translate(-50%, -50%);
-    z-index: 900;
-
-    perspective: 150cm; /* for when card is being inspected */
+}
+.inspect-container {
+    z-index: 599;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    perspective: 200cm; /* for when card is being inspected */
 }
 .showcard-background {
     position: absolute;
@@ -23,9 +29,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 499;
     background-color: black;
     opacity: 60%;
-    z-index: 899;
     animation: 0.5s ease-out showcard-bg;
 }
 @keyframes showcard-bg {
@@ -50,7 +56,7 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    z-index: 999;
+    z-index: 20;
     background-color: rgb(0, 0, 0);
     opacity: 0%;
     animation: 1s ease-in-out fadein;
@@ -98,9 +104,12 @@
         transform: translate(-50%, -50%) scale(70%);
     }
 }
-@media(max-height: 500px) {
+@media(max-width: 500px) {
     .card {
         transform: scale(30%) translate(-110%, -100%);
+    }
+    .showcard {
+        transform: translate(-50%, -50%) scale(50%);
     }
 }
 .card:nth-child(1) {
@@ -148,7 +157,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    z-index: 500;
+    z-index: 1;
     object-fit: cover;
     pointer-events: none;
 
